--- a/dot_config/waybar/config.jsonc.tmpl
+++ b/dot_config/waybar/config.jsonc.tmpl
@@ -43,34 +43,36 @@
       "󰁹"
     ]
   },
-{{- if eq .chezmoi.osRelease.id "chimera" "freebsd" }}
-  "clock": {
-    "format": "{:%A %d %b %H:%M}",
-    "interval": 60
-  },
-{{- else }}
+{{- if ne .chezmoi.os "darwin" }}
+  {{- if eq .chezmoi.osRelease.id "chimera" "freebsd" }}
     "clock": {
-    "format": "{:%A %d %b %H:%M}",
-    "tooltip-format": "<span color='#35b9ab'><tt><small>{calendar}</small></tt></span>",
-    "calendar": {
-      "mode-mon-col": 4,
-      "weeks-pos": "left",
-      "on-scroll": 1,
-      "on-click-right": "mode",
-      "format": {
-        "months": "<span color='#35b9ab'><b>{}</b></span>",
-        "weeks": "<span color='#73ba25'><b>{}</b></span>",
-        "weekdays": "<span color='#21a4df'><b>{}</b></span>",
-        "today": "<span color='#21a4df'><b><u>{}</u></b></span>"
-      }
+      "format": "{:%A %d %b %H:%M}",
+      "interval": 60
     },
-    "actions": {
-      "on-click-right": "mode",
-      "on-scroll-up": "shift_up",
-      "on-scroll-down": "shift_down"
+  {{- else }}
+      "clock": {
+      "format": "{:%A %d %b %H:%M}",
+      "tooltip-format": "<span color='#35b9ab'><tt><small>{calendar}</small></tt></span>",
+      "calendar": {
+        "mode-mon-col": 4,
+        "weeks-pos": "left",
+        "on-scroll": 1,
+        "on-click-right": "mode",
+        "format": {
+          "months": "<span color='#35b9ab'><b>{}</b></span>",
+          "weeks": "<span color='#73ba25'><b>{}</b></span>",
+          "weekdays": "<span color='#21a4df'><b>{}</b></span>",
+          "today": "<span color='#21a4df'><b><u>{}</u></b></span>"
+        }
+      },
+      "actions": {
+        "on-click-right": "mode",
+        "on-scroll-up": "shift_up",
+        "on-scroll-down": "shift_down"
+      },
+      "interval": 60
     },
-    "interval": 60
-  },
+  {{- end }}
 {{- end }}
   "custom/checkupdates": {
     "signal": 8, // called by script: update
