delcare font explicitly for certain os's

--- a/dot_config/private_fish/config.fish.tmpl
+++ b/dot_config/private_fish/config.fish.tmpl
@@ -18,6 +18,7 @@ if status is-interactive
     fish_add_path ~/.cargo/bin
     fish_add_path ~/go/bin
     fish_add_path ~/.local/bin
+    fish_add_path /opt/local/bin
     # envsource $HOME/.env
 
     # make ctrl-f accept auto suggestion in vi mode as it does in emacs mode
