--- a/dot_config/alacritty/private_alacritty.toml.tmpl
+++ b/dot_config/alacritty/private_alacritty.toml.tmpl
@@ -1,21 +1,20 @@
-
 [window]
 dynamic_title = true
 opacity = 0.95
-
 [cursor]
 style = "Block"
+{{- if ne .chezmoi.os "darwin"}}
 [font]
-# size = 11
 size = 12
-
 [font.normal]
 family = "RobotoMono Nerd Font Mono"
-
 [font.offset]
 # # vertical spacing, normalizing with foot setup
 # y = -2
-
+{{else}}
+[font]
+size = 14
+{{- end}}
 [general]
-# import = ["~/.config/alacritty/nordfox.toml"]
+import = ["~/.config/alacritty/nordfox.toml"]
 # import = ["~/.config/alacritty/mui-dark.toml"]
