--- a/dot_config/alacritty/private_alacritty.toml.tmpl
+++ b/dot_config/alacritty/private_alacritty.toml.tmpl
@@ -1,20 +1,24 @@
-[window]
-dynamic_title = true
-opacity = 0.95
 [cursor]
 style = "Block"
 {{- if ne .chezmoi.os "darwin"}}
-[font]
-size = 12
-[font.normal]
-family = "RobotoMono Nerd Font Mono"
-[font.offset]
-# # vertical spacing, normalizing with foot setup
-# y = -2
-{{else}}
-[font]
-size = 14
+	# linux and freebsd
+	[window]
+	dynamic_title = true
+	opacity = 0.95
+	[font]
+	normal = {family = "RobotoMono Nerd Font", style= "Regular"}
+	size = 12
+{{- else}}
+	# macOS
+	[window]
+	dynamic_title = true
+	opacity = 0.90
+	[font]
+	normal = {family = "RobotoMono Nerd Font", style= "Regular"}
+	italic = {style= "Italic"}
+	bold = {style= "SemiBold"}
+	bold_italic = {style= "SemiBold Italic"}
+	size = 13
 {{- end}}
 [general]
-import = ["~/.config/alacritty/nordfox.toml"]
-# import = ["~/.config/alacritty/mui-dark.toml"]
+import = ["~/.config/alacritty/alacritty_theme_mui_dark.toml"]
